ChangeLog for the Qt GUI to Astrophotography

20210815:
	* fixes for declination, interval and guiderate
	* add declination to calibration and to startCalibration interface
	* add parameter refresh function for guider
	* relocate some functions into a popup menu in the
	  guidercontrollerwidget
	* fix default for guidercontroller
	* remove the GuiderDescriptor class from guider.ice interface

20210814:
	* more segementation fault problems eliminated?
	* allow for the monitor images to be scaled down
	* fix (?) a seg fault issue with the pointing application
	* add north/south tracking modes
	* debug flip settings

20210813:
	* add flip check boxes to guidercontrollerwidget
	* add east/west to calibration display
	* calibrate button sends east/west to guider
	* calibration calculator stores east/west in the calibration
	* add EastWestIndicator widget

20210811:
	* add gain control to snowlife app

20210611:
	* fix connect for nonexistent currentIndexChange(QString)
	  -> currentTextChanged(QString)

20210609:
	* QFileDialog::DirectoryOnly removed
	* fix an unused variable
	* fix deprecated {g,s}etTime_t(), use QDateTime arithmetic
	* fix event->globalPos(), replace by event->globalPosition()
	* fix QPalette::Background -> QPalette::Window
	* switch to homebrew provided qt5

20210108:
	* fix bad demangle_cstr calls

20201227:
	* trying to find out why the client crashes if the daemon is not
	  running but the service has been advertised via zeroconf

20200824:
	* make sure image resizing still works if the image dimensions are
	  no longer divisible by a high power of 2

20200822:
	* add quality to ccdwidgetcontroller

20200821:
	* switch to StarTile in StarChartWidget

20200820:
	* portability in HeartBeat.cpp

20200819:
	* add CallbackIdentity mixin class
	* turn callback classes into QObjects and use messages instead
	  of method calls to references (which run the danger of the
	  instance going away and the call crashing the system)

20200802: